# HypothesisAnalysis

./: .gitignore  BQLoadClass.py  H1Script.py  H1ShortScript.py  README.md  pyproject.toml
Data/queries/: base_patrones.sql  catalogo_promociones_fechas.sql  complemento_funnel.sql  condiciones_promocion.sql  ga4_events.sql  grupo_condicion_promocion.sql  patrones_funnel_completo.sql  procesamiento_patrones.sql  promociones_combinadas.sql  sorteo.sql  tipo_cantidad_promocion.sql
